height issues fixed on all desktop browsers.  cannot scroll page on ios

--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,7 @@ body {
 .page_div {
 	flex:1;
  	border:solid;
- 	display:flex;
- 	overflow:hidden;
+	overflow:auto;	/* All ancestors set to hidden so this scrolls. */
  	position:relative;
 }
 
@@ -83,8 +82,8 @@ body {
 	position:absolute;
 	width:100%;
 	height:100%;
-	overflow:auto;	/* All ancestors set to hidden so this scrolls. */
 	text-align:left;
+	overflow:auto;
 	border:none;
 	font-size: 19px;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
@@ -314,7 +313,7 @@ input[type='file'] {
 	display:flex;
 	align-items:center;
 	padding: 5px;
-	width:820px;
+	width:100%;
 }
 
 .export_header_left {
@@ -325,17 +324,16 @@ input[type='file'] {
 	margin-left:auto;
 }
 
-.download_config_div {
-	width:820px;
+.export_options_div {
+	width:100%;
 	margin-left:40px;
 }
 
-.download_config_option {
+.export_option {
 	padding:5px;
 }
 
 .preview_div {
-	width:820px;
 	margin-bottom:20px;
 	position:relative;
 	margin-top:10px;
